--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </nav>
                 <div class="controler">
                     <img src="./img/Frame (2).svg">
-                    <a href="">Showrooms</a><img src="./img/Vector.svg">
+                    <a class="q1">Showrooms</a><img src="./img/Vector.svg">
                     <a href=""></a>
                 </div>
             </div>
